# advent-of-code-2020

./: .gitignore  Cargo.toml
input/2020/: day4.txt
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main.rs
