[package]
name = "aoc2020"
version = "0.1.0"
authors = ["K900 <me@0upti.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { git = "https://github.com/remi-dupre/aoc.git", branch = "main", features = ["bench"] }
text_io = "*"
petgraph = "*"
itertools = "*"
regex = "*"